[gd_scene load_steps=5 format=2]

[ext_resource path="res://arial.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/CenasInterface.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 1 )

[node name="Creditos" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Creditos" type="Label" parent="."]
margin_left = 341.0
margin_top = 59.0
margin_right = 790.0
margin_bottom = 429.0
custom_fonts/font = SubResource( 1 )
text = "Jogo desenvolvido por Eduardo de Quadros, para o Trabalho de Conclusão de Curso do Curso de Ciência da Computação da Universidade Comunitária da Região de Chapecó - Unochapecó, com orientação do Professor Radamés Pereira."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Voltar" type="Button" parent="."]
margin_left = 540.0
margin_top = 476.0
margin_right = 626.0
margin_bottom = 514.0
custom_fonts/font = SubResource( 2 )
text = "Voltar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX" type="AudioStreamPlayer" parent="."]

[connection signal="button_up" from="Button_Voltar" to="." method="_on_Button_Voltar_button_up"]
