[gd_scene load_steps=5 format=2]

[ext_resource path="res://arial.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://math_blocks.png" type="Texture" id=2]
[ext_resource path="res://scripts/CenasInterface.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 534, 234 )
scale = Vector2( 0.32, 0.32 )
texture = ExtResource( 2 )

[node name="Button_Jogar" type="Button" parent="."]
margin_left = 174.0
margin_top = 448.0
margin_right = 334.0
margin_bottom = 486.0
custom_fonts/font = SubResource( 1 )
text = "Jogar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Creditos" type="Button" parent="."]
margin_left = 467.0
margin_top = 448.0
margin_right = 627.0
margin_bottom = 486.0
custom_fonts/font = SubResource( 1 )
text = "Créditos"

[node name="Button_Instrucoes" type="Button" parent="."]
margin_left = 760.0
margin_top = 448.0
margin_right = 920.0
margin_bottom = 486.0
custom_fonts/font = SubResource( 1 )
text = "Instruções"

[node name="SFX" type="AudioStreamPlayer" parent="."]

[connection signal="button_up" from="Button_Jogar" to="." method="_on_Button_Jogar_button_up"]
[connection signal="button_up" from="Button_Creditos" to="." method="_on_Button_Creditos_button_up"]
[connection signal="button_up" from="Button_Instrucoes" to="." method="_on_Button_Instrucoes_button_up"]
